private_key_generator/tests/compile_fails/version_bits_too_large.stderr
error[E0080]: evaluation of `<private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 33, 24, 8> as private_key_generator_docs::EncodedId>::VERSION_BITS` failed
 --> src/id.rs
  |
  |             false => [/* VERSION_BITS must be less than or equal to 32. */][ VERSION_BITS as usize ]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 0 but the index is 33

note: erroneous constant encountered
   --> src/key_generator.rs
    |
    | ...   insert_ints_into_slice(&[masked_version as u64, masked_timestamp], &mut id.as_mut()[Id::METADATA_IDX..], &[Id::VERSION_BITS, Id::TI...
    |                                                                                                                  ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
   --> src/key_generator.rs
    |
    |             insert_ints_into_slice(&[masked_version as u64], &mut id.as_mut()[Id::METADATA_IDX..], &[Id::VERSION_BITS], BITS_IN_USE);
    |                                                                                                      ^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn private_key_generator_docs::KeyGenerator::<sha2::digest::core_api::CoreWrapper<hkdf::hmac::HmacCore<sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, sha2::OidSha256>>>>, private_key_generator_docs::VersioningConfig<3, 600, false, 4>, rand_chacha::ChaCha8Rng, sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, sha2::OidSha256>>>::encode_version_and_timestamp_into_id::<private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 33, 24, 8>>`
   --> src/key_generator.rs
    |
    |         self.encode_version_and_timestamp_into_id(&mut id, trimmed_timestamp);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
